--- a/src/app/components/main/nav-bar-main/nav-bar-main.component.html
+++ b/src/app/components/main/nav-bar-main/nav-bar-main.component.html
@@ -2,11 +2,10 @@
     <img src="" alt="Logo" class="logo">
     <div class="navbar-buttons">
         <button routerLink="./home">Inicio</button>
-        <button routerLink="./home">Feed</button>
         <button routerLink="./profile">Perfil</button>
         <button routerLink="./notification">Notificaciones</button>
         <button routerLink="./explorer">Explorar</button>
-        <button routerLink="./settings">Configuración</button>
-        <button (onclick)="cerrarSesion()">Cerrar Sesión</button>
+        <button routerLink="./configuration">Configuración</button>
+        <button (click)="cerrarSesion()">Cerrar Sesión</button>
     </div>
 </nav>
