--- a/src/app/components/authentication/singup/singup.component.html
+++ b/src/app/components/authentication/singup/singup.component.html
@@ -14,7 +14,7 @@
         </mat-form-field>
 
         <button mat-raised-button color="primary" type="submit">Registrarse!</button>
-        <button mat-raised-button color="primary" type="button" routerLink="/auth/singin">Volver</button>
+        <button mat-raised-button color="primary" type="button" (click)="setVolver()">Volver</button>
         <p class="or-separator">o</p>
         <button mat-raised-button type="button" class="google-btn">
             <img src="../../../assets/img/logo-google.png" alt="Google logo"> Continuar con Google
