--- a/src/app/components/main/home/home.component.html
+++ b/src/app/components/main/home/home.component.html
@@ -1,1 +1,10 @@
-<h1>home component works!</h1>
+<div class="grid-container">
+    <div *ngFor="let post of posts" class="post" (mouseenter)="showOptions(post)" (mouseleave)="hideOptions(post)">
+        <img [src]="post.imagen" alt="Post image">
+        <div class="options" [ngClass]="post.showOptions ? 'visible' : 'hidden'">
+            <button class="op-like">
+                Like
+            </button>
+        </div>
+    </div>
+</div>
