--- a/src/app/components/main/nav-bar-main/nav-bar-main.component.css
+++ b/src/app/components/main/nav-bar-main/nav-bar-main.component.css
@@ -58,3 +58,41 @@ input[type="search"] {
     background-color: black;
     color: white;
 }
+
+.showNoti{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 65px;
+    right: 0;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    z-index: 999999;
+    overflow-y: scroll;
+}
+.hideNoti{
+    display: none;
+}
+
+.noti-container{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: left;
+    width: 100%;
+}
+.noti{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 10px;
+    transition: background-color 0.3s;
+}
