Arregle de Home

--- a/src/app/components/main/nav-bar-main/nav-bar-main.component.html
+++ b/src/app/components/main/nav-bar-main/nav-bar-main.component.html
@@ -2,7 +2,7 @@
     <img src="../../../../assets/logo-small.svg" alt="Logo" class="logo" id="logo">
     <div class="navbar-buttons">
         <a routerLink="./home" class="item">Inicio</a> 
-        <a routerLink="./explorer" class="item">Explorar</a>
+        <a routerLink="./home" class="item">Explorar</a>
         <a routerLink="./post-creation" class="item">Crear</a>
     </div>
 
