--- a/src/app/components/main/home/home.component.css
+++ b/src/app/components/main/home/home.component.css
@@ -16,8 +16,8 @@
 }
 
 .post > img {
-    width: 100%;  /* ajustado para ocupar todo el ancho del padre */
-    height: 100%; /* ajustado para ocupar todo el alto del padre */
+    width: 15vw;  /* ajustado para ocupar todo el ancho del padre */
+    height: 20vw; /* ajustado para ocupar todo el alto del padre */
     object-fit: cover;
     object-position: center;
     border-radius: 10px;
@@ -35,7 +35,7 @@
     object-position: center;
     border-radius: 10px;
     cursor: pointer;
-    background-color: rgba(58, 46, 46, 0.5); /* Transparencia roja */
+    background-color: rgba(58, 50, 46, 0.5); /* Transparencia roja */
     z-index: 1000;
     display: none; /* Opcional: ocultar por defecto y mostrar en hover */
 }
@@ -49,6 +49,6 @@
 }
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(215px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(15%, 1fr));
     grid-auto-rows: auto;
 }
