--- a/src/app/components/main/nav-bar-main/nav-bar-main.component.css
+++ b/src/app/components/main/nav-bar-main/nav-bar-main.component.css
@@ -75,9 +75,35 @@ input[type="search"] {
     z-index: 999999;
     overflow-y: scroll;
 }
+.showConfi{
+    display: none;
+}
+
+.showConfi{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 65px;
+    right: 0;
+    width: 300px;
+    height: 400px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    z-index: 999999;
+    overflow-y: scroll;
+}
+
+.hideConfi{
+    display: none;
+}
+
 .hideNoti{
     display: none;
 }
+
 
 .noti-container{
     display: flex;
