[UPD] Integrar inicio de sesion con servicio web

--- a/src/app/components/main/profile/profile.component.html
+++ b/src/app/components/main/profile/profile.component.html
@@ -2,7 +2,7 @@
      
     <div class="perfil-info">
       <img src="../../../../assets/perfildefault.webp" alt="Foto de perfil">
-      <h1>{{ nombre }} {{ apellido }}</h1>
+      <h1>{{nombresCompletos}}</h1>
       <p>Usuario: @{{ usuario }}</p>
       <p>Seguidores: 100 | Siguiendo: 50</p>
       <button (click)="compartir()">Compartir</button>
